--- a/view/css/main.css
+++ b/view/css/main.css
@@ -14,3 +14,26 @@ div#title h1 {
 	background-image: url("../img/back.png");
 	color: #eeeeee;
 }
+
+#loading{
+    border:1px dashed #999;
+    padding:15px;
+    position: fixed;
+    top:50%;
+    left:50%;
+    background-color:#FFF;
+    filter: alpha(opacity=85);
+    -moz-opacity:0.85;
+    opacity:0.85;
+    z-index:1000;
+}
+
+#loading .loadingMsg{
+    text-align:center;
+    padding-top:100px;
+    width:100px;
+    background-image:url("../img/gif/loading.gif");
+    background-position: center top;
+    background-repeat: no-repeat;
+    font-family: "ÉÅÉCÉäÉI"!important;
+}
