4/23 アバター機能完成 CSV機能途中

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -41,6 +41,7 @@ div#title h1 {
 .avatar_relative {
     position: relative;
     width: 100px;
+    height: 200px;
 }
 .avatar_absolute {
     position: absolute;
